# akita

./: .gitignore  Makefile.am  README.md  akita.conf.example  configure.ac
.github/workflows/: teltonika_rut9_r.yaml  teltonika_rut9m_r.yaml  teltonika_trb1_r.yaml
openwrt/: akita.config  akita.init  modbus_akita.config  modbus_akita.init
openwrt/CONTROL/: conffiles  control  postinst
src/: Makefile.am  akita.c
